--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,3 +1,16 @@
 {
-  "extends": "@react-native/typescript-config/tsconfig.json"
+  "extends": "@tsconfig/react-native/tsconfig.json",
+  "compilerOptions": {
+    "baseUrl": ".",
+    "paths": {      "*": ["src/*"],
+      "tests": ["tests/*"],
+      "@commons/*": ["src/commons/*"],
+      "@components/*": ["src/commons/ui/components/*"],
+      "@constants/*": ["src/commons/constants/*"],
+      "@helpers/*": ["src/commons/helpers/*"],
+      "@external/*": ["src/commons/external/*"],
+      "@modules/*": ["src/modules/*"],
+      "@ui/*": ["src/commons/ui/*"]
+    },
+  }
 }
