--- a/package.json
+++ b/package.json
@@ -24,17 +24,14 @@
     "@react-native/typescript-config": "0.74.83",
     "@tsconfig/react-native": "^3.0.5",
     "@types/jest": "^29.5.12",
-    "@types/react": "^18.3.3",
-    "@types/react-test-renderer": "^18.3.0",
+    "@types/react": "^18.2.6",
+    "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
-    "eslint": "^9.3.0",
-    "eslint-config-airbnb": "^19.0.4",
-    "husky": "^9.0.11",
+    "eslint": "^8.19.0",
     "jest": "^29.6.3",
-    "lint-staged": "^15.2.5",
-    "prettier": "^3.2.5",
+    "prettier": "2.8.8",
     "react-test-renderer": "18.2.0",
-    "typescript": "^5.4.5"
+    "typescript": "5.0.4"
   },
   "engines": {
     "node": ">=18"
