--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.7.2",
     "react": "18.2.0",
     "react-native": "0.74.1",
+    "react-native-config": "^1.5.1",
     "react-native-fast-image": "^8.6.3",
     "react-native-mmkv-storage": "^0.9.1"
   },
